<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.asaltech.haseb.activities.DisplaySignupActivity"
    android:orientation="vertical" >	
    	<EditText
    	    android:id="@+id/editText1"
    	    android:layout_width="fill_parent"
    	    android:layout_height="40dp"
    	    android:hint="@string/fisrtName"
    	    android:ems="10"
    	    android:background="@drawable/edittextshape"
    	     
    	    android:inputType="textPersonName" >

    	   
    	</EditText>
    	<EditText
    	    android:id="@+id/editText2"
    	    android:layout_width="fill_parent"
    	    android:layout_height="40dp"
    	    android:ems="10"
    	     android:hint="@string/lastName"
    	     android:layout_marginTop="15dp"
    	      android:background="@drawable/edittextshape"
    	    android:inputType="textPersonName" >

    	    <requestFocus />
    	</EditText>  
    	<EditText
    	    android:id="@+id/editText3"
    	    android:layout_width="fill_parent"
    	    android:layout_height="40dp"
    	    android:ems="10"
    	     android:hint="@string/phone"
    	     android:layout_marginTop="15dp"
    	      android:background="@drawable/edittextshape"
    	    android:inputType="textPersonName" >

    	    <requestFocus />
    	</EditText>	
    	<EditText
    	    android:id="@+id/editText4"
    	    android:layout_width="fill_parent"
    	    android:layout_height="40dp"
    	    android:ems="10"
    	     android:hint="@string/email"
    	     android:layout_marginTop="15dp"
    	      android:background="@drawable/edittextshape"
    	    android:inputType="textEmailAddress" />
         
    
    	<EditText
    	    android:id="@+id/editText5"
    	    android:layout_width="fill_parent"
    	    android:layout_height="40dp"
    	    android:ems="10"
    	     android:hint="@string/pass"
    	     android:layout_marginTop="15dp"
    	      android:background="@drawable/edittextshape"
    	    android:inputType="textPassword" />
         
    	

    	<EditText
    	    android:id="@+id/editText6"
    	    android:layout_width="fill_parent"
    	    android:layout_height="40dp"
    	    android:ems="10"
    	     android:hint="@string/confirmpass"
    	     android:layout_marginTop="15dp"
    	      android:background="@drawable/edittextshape"
    	    android:inputType="textPassword" />
         
    	<LinearLayout
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	 android:gravity="center_horizontal"
    	android:layout_height="wrap_content">
 <Button
        android:id="@+id/button1"
       android:gravity="center"
        android:textColor="#e0e4cc"
         android:onClick="createAccount"
         android:layout_width="120dp"
            android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/buttonshape"
        android:text="@string/save" />
 
 </LinearLayout>

    	
    	
</LinearLayout>
